# AI-Agent

./: README.md  main.py  pyproject.toml
agentic-rag/: ingestion.py  main.py  pyproject.toml
agentic-rag/graph/: consts.py  graph.py  state.py
agentic-rag/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
agentic-rag/graph/chains/tests/: test_chains.py
agentic-rag/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  route_query.py  web_search.py
base/: README.md  main.py  pyproject.toml
basic-rag/: ingestion.py  main.py  pyproject.toml
doc-helper-rag/: ingestion.py  main.py  pyproject.toml  rag_pipeline.py
react-agent-langraph/: main.py  nodes.py  pyproject.toml  react.py
react-old-step-by-step-agent/: main.py  main_with_bind_tools.py  pyproject.toml
reflection-agent/: chains.py  main.py  pyproject.toml
search-agent/: main.py  pyproject.toml
